@@ -22,7 +22,7 @@ import com.badlogic.gdx.math.Rectangle;
 import com.badlogic.gdx.scenes.scene2d.Actor;
 import com.badlogic.gdx.scenes.scene2d.Group;
 import com.badlogic.gdx.scenes.scene2d.InputEvent;
-import com.badlogic.gdx.scenes.scene2d.ui.Tree.BaseNode;
+import com.badlogic.gdx.scenes.scene2d.ui.Tree.Node;
 import com.badlogic.gdx.scenes.scene2d.utils.ChangeListener.ChangeEvent;
 import com.badlogic.gdx.scenes.scene2d.utils.ClickListener;
 import com.badlogic.gdx.scenes.scene2d.utils.Drawable;
@@ -36,16 +36,18 @@ import com.badlogic.gdx.utils.Array;
  * The preferred size of the tree is determined by the preferred size of the actors for the expanded nodes.
  * <p>
  * {@link ChangeEvent} is fired when the selected node changes.
+ * @param <N> The type of nodes in the tree.
+ * @param <V> The type of values for each node.
  * @author Nathan Sweet */
-public class Tree<T extends BaseNode> extends WidgetGroup {
+public class Tree<N extends Node, V> extends WidgetGroup {
 	TreeStyle style;
-	final Array<T> rootNodes = new Array();
-	final Selection<T> selection;
+	final Array<N> rootNodes = new Array();
+	final Selection<N> selection;
 	float ySpacing = 4, iconSpacingLeft = 2, iconSpacingRight = 2, padding = 0, indentSpacing;
 	private float prefWidth, prefHeight;
 	private boolean sizeInvalid = true;
-	private T foundNode, overNode;
-	BaseNode rangeStart;
+	private N foundNode, overNode;
+	N rangeStart;
 	private ClickListener clickListener;
 
 	public Tree (Skin skin) {
@@ -57,7 +59,7 @@ public class Tree<T extends BaseNode> extends WidgetGroup {
 	}
 
 	public Tree (TreeStyle style) {
-		selection = new Selection<T>() {
+		selection = new Selection<N>() {
 			protected void changed () {
 				switch (size()) {
 				case 0:
@@ -78,13 +80,13 @@ public class Tree<T extends BaseNode> extends WidgetGroup {
 	private void initialize () {
 		addListener(clickListener = new ClickListener() {
 			public void clicked (InputEvent event, float x, float y) {
-				T node = getNodeAt(y);
+				N node = getNodeAt(y);
 				if (node == null) return;
 				if (node != getNodeAt(getTouchDownY())) return;
 				if (selection.getMultiple() && selection.notEmpty() && UIUtils.shift()) {
 					// Select range (shift).
 					if (rangeStart == null) rangeStart = node;
-					BaseNode rangeStart = Tree.this.rangeStart;
+					N rangeStart = Tree.this.rangeStart;
 					if (!UIUtils.ctrl()) selection.clear();
 					float start = rangeStart.actor.getY(), end = node.actor.getY();
 					if (start > end)
@@ -131,11 +133,11 @@ public class Tree<T extends BaseNode> extends WidgetGroup {
 		if (indentSpacing == 0) indentSpacing = Math.max(style.plus.getMinWidth(), style.minus.getMinWidth());
 	}
 
-	public void add (T node) {
+	public void add (N node) {
 		insert(rootNodes.size, node);
 	}
 
-	public void insert (int index, T node) {
+	public void insert (int index, N node) {
 		int existingIndex = rootNodes.indexOf(node, true);
 		if (existingIndex != -1 && existingIndex < index) index--;
 		remove(node);
@@ -145,7 +147,7 @@ public class Tree<T extends BaseNode> extends WidgetGroup {
 		invalidateHierarchy();
 	}
 
-	public void remove (T node) {
+	public void remove (N node) {
 		if (node.parent != null) {
 			node.parent.remove(node);
 			return;
@@ -163,7 +165,7 @@ public class Tree<T extends BaseNode> extends WidgetGroup {
 		selection.clear();
 	}
 
-	public Array<T> getNodes () {
+	public Array<N> getNodes () {
 		return rootNodes;
 	}
 
@@ -183,11 +185,11 @@ public class Tree<T extends BaseNode> extends WidgetGroup {
 		prefHeight = getHeight() - prefHeight;
 	}
 
-	private void computeSize (Array<T> nodes, float indent, float plusMinusWidth) {
+	private void computeSize (Array<N> nodes, float indent, float plusMinusWidth) {
 		float ySpacing = this.ySpacing;
 		float spacing = iconSpacingLeft + iconSpacingRight;
 		for (int i = 0, n = nodes.size; i < n; i++) {
-			T node = nodes.get(i);
+			N node = nodes.get(i);
 			float rowWidth = indent + plusMinusWidth;
 			Actor actor = node.actor;
 			if (actor instanceof Layout) {
@@ -214,11 +216,11 @@ public class Tree<T extends BaseNode> extends WidgetGroup {
 		layout(rootNodes, padding, getHeight() - ySpacing / 2, plusMinusWidth);
 	}
 
-	private float layout (Array<T> nodes, float indent, float y, float plusMinusWidth) {
+	private float layout (Array<N> nodes, float indent, float y, float plusMinusWidth) {
 		float ySpacing = this.ySpacing;
 		float spacing = iconSpacingLeft + iconSpacingRight;
 		for (int i = 0, n = nodes.size; i < n; i++) {
-			T node = nodes.get(i);
+			N node = nodes.get(i);
 			float x = indent + plusMinusWidth;
 			if (node.icon != null) x += spacing + node.icon.getMinWidth();
 			if (node.actor instanceof Layout) ((Layout)node.actor).pack();
@@ -249,7 +251,7 @@ public class Tree<T extends BaseNode> extends WidgetGroup {
 	}
 
 	/** Draws selection, icons, and expand icons. */
-	private void draw (Batch batch, Array<T> nodes, float indent, float plusMinusWidth) {
+	private void draw (Batch batch, Array<N> nodes, float indent, float plusMinusWidth) {
 		Rectangle cullingArea = getCullingArea();
 		float cullBottom = 0, cullTop = 0;
 		if (cullingArea != null) {
@@ -259,7 +261,7 @@ public class Tree<T extends BaseNode> extends WidgetGroup {
 		Drawable plus = style.plus, minus = style.minus;
 		float x = getX(), y = getY(), expandX = x + indent, iconX = expandX + plusMinusWidth + iconSpacingLeft;
 		for (int i = 0, n = nodes.size; i < n; i++) {
-			T node = nodes.get(i);
+			N node = nodes.get(i);
 			float height = node.height;
 			Actor actor = node.actor;
 			float actorY = actor.getY();
@@ -288,15 +290,15 @@ public class Tree<T extends BaseNode> extends WidgetGroup {
 	}
 
 	/** @return May be null. */
-	public T getNodeAt (float y) {
+	public N getNodeAt (float y) {
 		foundNode = null;
 		getNodeAt(rootNodes, y, getHeight());
 		return foundNode;
 	}
 
-	private float getNodeAt (Array<T> nodes, float y, float rowY) {
+	private float getNodeAt (Array<N> nodes, float y, float rowY) {
 		for (int i = 0, n = nodes.size; i < n; i++) {
-			T node = nodes.get(i);
+			N node = nodes.get(i);
 			float height = node.height;
 			rowY -= node.getHeight() - height; // Node subclass may increase getHeight.
 			if (y >= rowY - height - ySpacing && y < rowY) {
@@ -312,9 +314,9 @@ public class Tree<T extends BaseNode> extends WidgetGroup {
 		return rowY;
 	}
 
-	void selectNodes (Array<T> nodes, float low, float high) {
+	void selectNodes (Array<N> nodes, float low, float high) {
 		for (int i = 0, n = nodes.size; i < n; i++) {
-			T node = nodes.get(i);
+			N node = nodes.get(i);
 			if (node.actor.getY() < low) break;
 			if (!node.isSelectable()) continue;
 			if (node.actor.getY() <= high) selection.add(node);
@@ -322,21 +324,32 @@ public class Tree<T extends BaseNode> extends WidgetGroup {
 		}
 	}
 
-	public Selection<T> getSelection () {
+	public Selection<N> getSelection () {
 		return selection;
+	}
+
+	/** Returns the first selected node, or null. */
+	public N getSelectedNode () {
+		return selection.first();
+	}
+
+	/** Returns the first selected value, or null. */
+	public V getSelectedValue () {
+		N node = selection.first();
+		return node == null ? null : (V)node.getValue();
 	}
 
 	public TreeStyle getStyle () {
 		return style;
 	}
 
-	public Array<T> getRootNodes () {
+	public Array<N> getRootNodes () {
 		return rootNodes;
 	}
 
 	/** Removes the root node actors from the tree and adds them again. This is useful after changing the order of
 	 * {@link #getRootNodes()}.
-	 * @see BaseNode#updateChildren() */
+	 * @see Node#updateChildren() */
 	public void updateRootNodes () {
 		for (int i = rootNodes.size - 1; i >= 0; i--)
 			rootNodes.get(i).removeFromTree(this);
@@ -345,18 +358,18 @@ public class Tree<T extends BaseNode> extends WidgetGroup {
 	}
 
 	/** @return May be null. */
-	public T getOverNode () {
+	public N getOverNode () {
 		return overNode;
 	}
 
 	/** @return May be null. */
-	public Object getOverObject () {
+	public V getOverValue () {
 		if (overNode == null) return null;
-		return overNode.getObject();
+		return (V)overNode.getValue();
 	}
 
 	/** @param overNode May be null. */
-	public void setOverNode (T overNode) {
+	public void setOverNode (N overNode) {
 		this.overNode = overNode;
 	}
 
@@ -399,13 +412,13 @@ public class Tree<T extends BaseNode> extends WidgetGroup {
 		return prefHeight;
 	}
 
-	public void findExpandedObjects (Array objects) {
-		findExpandedObjects(rootNodes, objects);
+	public void findExpandedValues (Array<V> values) {
+		findExpandedValues(rootNodes, values);
 	}
 
-	public void restoreExpandedObjects (Array objects) {
-		for (int i = 0, n = objects.size; i < n; i++) {
-			BaseNode node = findNode(objects.get(i));
+	public void restoreExpandedValues (Array<V> values) {
+		for (int i = 0, n = values.size; i < n; i++) {
+			N node = findNode(values.get(i));
 			if (node != null) {
 				node.setExpanded(true);
 				node.expandTo();
@@ -413,29 +426,29 @@ public class Tree<T extends BaseNode> extends WidgetGroup {
 		}
 	}
 
-	static boolean findExpandedObjects (Array<? extends BaseNode> nodes, Array objects) {
+	static boolean findExpandedValues (Array<? extends Node> nodes, Array values) {
 		boolean expanded = false;
 		for (int i = 0, n = nodes.size; i < n; i++) {
-			BaseNode node = nodes.get(i);
-			if (node.expanded && !findExpandedObjects(node.children, objects)) objects.add(node.object);
+			Node node = nodes.get(i);
+			if (node.expanded && !findExpandedValues(node.children, values)) values.add(node.value);
 		}
 		return expanded;
 	}
 
-	/** Returns the node with the specified object, or null. */
-	public T findNode (Object object) {
-		if (object == null) throw new IllegalArgumentException("object cannot be null.");
-		return (T)findNode(rootNodes, object);
+	/** Returns the node with the specified value, or null. */
+	public N findNode (V value) {
+		if (value == null) throw new IllegalArgumentException("value cannot be null.");
+		return (N)findNode(rootNodes, value);
 	}
 
-	static BaseNode findNode (Array<? extends BaseNode> nodes, Object object) {
+	static Node findNode (Array<? extends Node> nodes, Object value) {
 		for (int i = 0, n = nodes.size; i < n; i++) {
-			BaseNode node = nodes.get(i);
-			if (object.equals(node.object)) return node;
+			Node node = nodes.get(i);
+			if (value.equals(node.value)) return node;
 		}
 		for (int i = 0, n = nodes.size; i < n; i++) {
-			BaseNode node = nodes.get(i);
-			BaseNode found = findNode(node.children, object);
+			Node node = nodes.get(i);
+			Node found = findNode(node.children, value);
 			if (found != null) return found;
 		}
 		return null;
@@ -445,9 +458,9 @@ public class Tree<T extends BaseNode> extends WidgetGroup {
 		collapseAll(rootNodes);
 	}
 
-	static void collapseAll (Array<? extends BaseNode> nodes) {
+	static void collapseAll (Array<? extends Node> nodes) {
 		for (int i = 0, n = nodes.size; i < n; i++) {
-			BaseNode node = nodes.get(i);
+			Node node = nodes.get(i);
 			node.setExpanded(false);
 			collapseAll(node.children);
 		}
@@ -457,7 +470,7 @@ public class Tree<T extends BaseNode> extends WidgetGroup {
 		expandAll(rootNodes);
 	}
 
-	static void expandAll (Array<? extends BaseNode> nodes) {
+	static void expandAll (Array<? extends Node> nodes) {
 		for (int i = 0, n = nodes.size; i < n; i++)
 			nodes.get(i).expandAll();
 	}
@@ -467,19 +480,24 @@ public class Tree<T extends BaseNode> extends WidgetGroup {
 		return clickListener;
 	}
 
-	/** The node base class to be subclassed for use with {@link Tree}.
+	/** A {@link Tree} node which has an actor and value.
+	 * <p>
+	 * A subclass can be used so the generic type parameters don't need to be specified repeatedly.
+	 * @param <N> The type for the node's parent and child nodes.
+	 * @param <V> The type for the node's value.
+	 * @param <A> The type for the node's actor.
 	 * @author Nathan Sweet */
-	static abstract public class BaseNode<T extends BaseNode> {
-		final Actor actor;
-		T parent;
-		final Array<T> children = new Array(0);
+	static abstract public class Node<N extends Node, V, A extends Actor> {
+		final A actor;
+		N parent;
+		final Array<N> children = new Array(0);
 		boolean selectable = true;
 		boolean expanded;
 		Drawable icon;
 		float height;
-		Object object;
+		V value;
 
-		public BaseNode (Actor actor) {
+		public Node (A actor) {
 			if (actor == null) throw new IllegalArgumentException("actor cannot be null.");
 			this.actor = actor;
 		}
@@ -501,33 +519,33 @@ public class Tree<T extends BaseNode> extends WidgetGroup {
 		}
 
 		/** Called to add the actor to the tree when the node's parent is expanded. */
-		protected void addToTree (Tree<T> tree) {
+		protected void addToTree (Tree<N, V> tree) {
 			tree.addActor(actor);
 			if (!expanded) return;
 			Object[] children = this.children.items;
 			for (int i = this.children.size - 1; i >= 0; i--)
-				((BaseNode)children[i]).addToTree(tree);
+				((N)children[i]).addToTree(tree);
 		}
 
 		/** Called to remove the actor from the tree when the node's parent is collapsed. */
-		protected void removeFromTree (Tree<T> tree) {
+		protected void removeFromTree (Tree<N, V> tree) {
 			tree.removeActor(actor);
 			if (!expanded) return;
 			Object[] children = this.children.items;
 			for (int i = this.children.size - 1; i >= 0; i--)
-				((BaseNode)children[i]).removeFromTree(tree);
+				((N)children[i]).removeFromTree(tree);
 		}
 
-		public void add (T node) {
+		public void add (N node) {
 			insert(children.size, node);
 		}
 
-		public void addAll (Array<T> nodes) {
+		public void addAll (Array<N> nodes) {
 			for (int i = 0, n = nodes.size; i < n; i++)
 				insert(children.size, nodes.get(i));
 		}
 
-		public void insert (int index, T node) {
+		public void insert (int index, N node) {
 			node.parent = this;
 			children.insert(index, node);
 			updateChildren();
@@ -541,7 +559,7 @@ public class Tree<T extends BaseNode> extends WidgetGroup {
 				parent.remove(this);
 		}
 
-		public void remove (T node) {
+		public void remove (N node) {
 			children.removeValue(node, true);
 			if (!expanded) return;
 			Tree tree = getTree();
@@ -553,19 +571,19 @@ public class Tree<T extends BaseNode> extends WidgetGroup {
 			if (tree != null) {
 				Object[] children = this.children.items;
 				for (int i = this.children.size - 1; i >= 0; i--)
-					((BaseNode)children[i]).removeFromTree(tree);
+					((N)children[i]).removeFromTree(tree);
 			}
 			children.clear();
 		}
 
 		/** Returns the tree this node is currently in, or null. */
-		public Tree<T> getTree () {
+		public Tree<N, V> getTree () {
 			Group parent = actor.getParent();
 			if (parent instanceof Tree) return (Tree)parent;
 			return null;
 		}
 
-		public Actor getActor () {
+		public A getActor () {
 			return actor;
 		}
 
@@ -574,7 +592,7 @@ public class Tree<T extends BaseNode> extends WidgetGroup {
 		}
 
 		/** If the children order is changed, {@link #updateChildren()} must be called. */
-		public Array<T> getChildren () {
+		public Array<N> getChildren () {
 			return children;
 		}
 
@@ -596,7 +614,7 @@ public class Tree<T extends BaseNode> extends WidgetGroup {
 		}
 
 		/** @return May be null. */
-		public T getParent () {
+		public N getParent () {
 			return parent;
 		}
 
@@ -605,13 +623,13 @@ public class Tree<T extends BaseNode> extends WidgetGroup {
 			this.icon = icon;
 		}
 
-		public Object getObject () {
-			return object;
+		public V getValue () {
+			return value;
 		}
 
-		/** Sets an application specific object for this node. */
-		public void setObject (Object object) {
-			this.object = object;
+		/** Sets an application specific value for this node. */
+		public void setValue (V value) {
+			this.value = value;
 		}
 
 		public Drawable getIcon () {
@@ -620,7 +638,7 @@ public class Tree<T extends BaseNode> extends WidgetGroup {
 
 		public int getLevel () {
 			int level = 0;
-			BaseNode current = this;
+			Node current = this;
 			do {
 				level++;
 				current = current.getParent();
@@ -628,11 +646,11 @@ public class Tree<T extends BaseNode> extends WidgetGroup {
 			return level;
 		}
 
-		/** Returns this node or the child node with the specified object, or null. */
-		public T findNode (Object object) {
-			if (object == null) throw new IllegalArgumentException("object cannot be null.");
-			if (object.equals(this.object)) return (T)this;
-			return (T)Tree.findNode(children, object);
+		/** Returns this node or the child node with the specified value, or null. */
+		public N findNode (V value) {
+			if (value == null) throw new IllegalArgumentException("value cannot be null.");
+			if (value.equals(this.value)) return (N)this;
+			return (N)Tree.findNode(children, value);
 		}
 
 		/** Collapses all nodes under and including this node. */
@@ -649,7 +667,7 @@ public class Tree<T extends BaseNode> extends WidgetGroup {
 
 		/** Expands all parent nodes of this node. */
 		public void expandTo () {
-			BaseNode node = parent;
+			Node node = parent;
 			while (node != null) {
 				node.setExpanded(true);
 				node = node.parent;
@@ -664,13 +682,13 @@ public class Tree<T extends BaseNode> extends WidgetGroup {
 			this.selectable = selectable;
 		}
 
-		public void findExpandedObjects (Array objects) {
-			if (expanded && !Tree.findExpandedObjects(children, objects)) objects.add(object);
+		public void findExpandedValues (Array<V> values) {
+			if (expanded && !Tree.findExpandedValues(children, values)) values.add(value);
 		}
 
-		public void restoreExpandedObjects (Array objects) {
-			for (int i = 0, n = objects.size; i < n; i++) {
-				BaseNode node = findNode(objects.get(i));
+		public void restoreExpandedValues (Array<V> values) {
+			for (int i = 0, n = values.size; i < n; i++) {
+				N node = findNode(values.get(i));
 				if (node != null) {
 					node.setExpanded(true);
 					node.expandTo();
@@ -685,9 +703,9 @@ public class Tree<T extends BaseNode> extends WidgetGroup {
 		}
 
 		/** Returns true if the specified node is this node or an ascendant of this node. */
-		public boolean isAscendantOf (T node) {
+		public boolean isAscendantOf (N node) {
 			if (node == null) throw new IllegalArgumentException("node cannot be null.");
-			BaseNode current = node;
+			Node current = node;
 			do {
 				if (current == this) return true;
 				current = current.parent;
@@ -696,22 +714,14 @@ public class Tree<T extends BaseNode> extends WidgetGroup {
 		}
 
 		/** Returns true if the specified node is this node or an descendant of this node. */
-		public boolean isDescendantOf (T node) {
+		public boolean isDescendantOf (N node) {
 			if (node == null) throw new IllegalArgumentException("node cannot be null.");
-			BaseNode parent = this;
+			Node parent = this;
 			do {
 				if (parent == node) return true;
 				parent = parent.parent;
 			} while (parent != null);
 			return false;
-		}
-	}
-
-	/** A simple node implementation.
-	 * @author Nathan Sweet */
-	static public class Node extends BaseNode<Node> {
-		public Node (Actor actor) {
-			super(actor);
 		}
 	}
 
