@@ -24,7 +24,6 @@ import com.badlogic.gdx.scenes.scene2d.ui.Skin;
 import com.badlogic.gdx.scenes.scene2d.ui.Table;
 import com.badlogic.gdx.scenes.scene2d.ui.TextButton;
 import com.badlogic.gdx.scenes.scene2d.ui.Tree;
-import com.badlogic.gdx.scenes.scene2d.ui.Tree.Node;
 import com.badlogic.gdx.scenes.scene2d.utils.ClickListener;
 import com.badlogic.gdx.tests.utils.GdxTest;
 
@@ -35,29 +34,40 @@ public class TreeTest extends GdxTest {
 		stage = new Stage();
 		Gdx.input.setInputProcessor(stage);
 
-		Skin skin = new Skin(Gdx.files.internal("data/uiskin.json"));
+		final Skin skin = new Skin(Gdx.files.internal("data/uiskin.json"));
 
 		Table table = new Table();
 		table.setFillParent(true);
 		stage.addActor(table);
 
-		// Be sure to provide generics for the type of node in the tree declaration. 
-		final Tree<Node> tree = new Tree(skin);
+		class Node extends Tree.Node<Node, String, TextButton> {
+			public Node (String text) {
+				super(new TextButton(text, skin));
+				setValue(text);
+			}
+		}
 
-		final Node moo1 = new Node(new TextButton("moo1", skin));
-		final Node moo2 = new Node(new TextButton("moo2", skin));
-		final Node moo3 = new Node(new TextButton("moo3", skin));
-		final Node moo4 = new Node(new TextButton("moo4", skin));
-		final Node moo5 = new Node(new TextButton("moo5", skin));
+		final Tree<Node, String> tree = new Tree(skin);
+		final Node moo1 = new Node("moo1");
+		final Node moo2 = new Node("moo2");
+		final Node moo3 = new Node("moo3");
+		final Node moo4 = new Node("moo4");
+		final Node moo5 = new Node("moo5");
 		tree.add(moo1);
 		tree.add(moo2);
 		moo2.add(moo3);
 		moo3.add(moo4);
 		tree.add(moo5);
 
+		moo1.getActor().addListener(new ClickListener() {
+			public void clicked (InputEvent event, float x, float y) {
+				System.out.println(moo1.getActor().getText() + ", " + moo1.getValue() + ", " + moo1.getValue().length());
+			}
+		});
 		moo5.getActor().addListener(new ClickListener() {
 			public void clicked (InputEvent event, float x, float y) {
-				tree.remove(moo4);
+				Node node = tree.findNode("moo4");
+				if (node != null) node.remove();
 			}
 		});
 
